data/derived/comb/progs/unify/prog4707.ml.out
Characters 140-144:
  let seen' = h::seen in
                 ^^^^
Error: This expression has type 'a but an expression was expected of type
         'a list list
       The type variable 'a occurs inside 'a list list
